--- a/styles.scss
+++ b/styles.scss
@@ -2,6 +2,7 @@
 Table of contents
 
     1. Sticky header / .sticky-header
+        1.1 Mobile Nav
     2. Global styles
         2.1 Button styles
     3. Typography
@@ -87,6 +88,45 @@ $white-border:               2px solid #ffffff;
     vertical-align: middle;
     display: inline-block;
   }
+
+/*------------------------------------------------------------------
+   1.1 Mobile Nav
+-------------------------------------------------------------------*/
+
+ .mobile-nav {
+  overflow: hidden;
+  background-color: #000000;
+  position: relative;
+
+  img {
+    width: 55px;
+  }
+
+  #navLinks {
+    display: none;
+  }
+
+  a {
+    color: white;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    display: block;
+
+    &.icon {
+      background: black;
+      display: block;
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
+
+    &:hover {
+      background-color: #ff704b;
+      color: black;
+    }
+  }
+}
   
   /*------------------------------------------------------------------
      2. Global styles
